--- a/templates/foodResults.html
+++ b/templates/foodResults.html
@@ -31,7 +31,7 @@
     <div class="row">
         <div class="col-md-7">
             <a href="#">
-                <img class="img-responsive" src="../public/img/1.jpg" >
+                <img class="img-responsive" src="../public/img/italianFood.jpg" >
             </a>
         </div>
         <div class="col-md-5">
@@ -49,7 +49,7 @@
     <div class="row">
         <div class="col-md-7">
             <a href="#">
-                <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                <img class="img-responsive" src="../public/img/lasagne.jpg" alt="">
             </a>
         </div>
         <div class="col-md-5">
@@ -67,7 +67,7 @@
     <div class="row">
         <div class="col-md-7">
             <a href="#">
-                <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                <img class="img-responsive" src="../public/img/cannoli2.jpg" alt="">
             </a>
         </div>
         <div class="col-md-5">
@@ -79,6 +79,24 @@
     </div>
     <!-- /.row -->
 
+
+     <hr>
+
+    <!-- Project Four -->
+    <div class="row">
+        <div class="col-md-7">
+            <a href="#">
+                <img class="img-responsive" src="../public/img/pizza.jpeg" alt="">
+            </a>
+        </div>
+        <div class="col-md-5">
+            <h3>Project Three</h3>
+            <h4>Subheading</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
+            <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+        </div>
+    </div>
+    <!-- /.row -->
 
 </div>
 <!-- /.container -->
