--- a/public/styles/grayscale.css
+++ b/public/styles/grayscale.css
@@ -147,7 +147,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
+    background: url(../img/9.jpg) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -162,6 +162,7 @@ a:focus {
 
 .intro .intro-body .brand-heading {
     font-size: 40px;
+    margin-top: -64px;
 }
 
 .intro .intro-body .intro-text {
@@ -175,11 +176,12 @@ a:focus {
     }
 
     .intro .intro-body .brand-heading {
-        font-size: 72px;
+        font-size: 85px;
     }
 
     .intro .intro-body .intro-text {
-        font-size: 26px;
+        font-size: 32px;
+        font-weight: 600;
     }
 }
 
@@ -341,11 +343,14 @@ ul.banner-social-buttons {
 }
 
 footer {
-    padding: 50px 0;
+    position: absolute;
+    bottom:0
+
 }
 
 footer p {
-    margin: 0;
+    margin:0;
+    margin-right: -560px;
 }
 
 ::-moz-selection {
