--- a/templates/foodResults.html
+++ b/templates/foodResults.html
@@ -20,6 +20,18 @@
     <!-- Page Heading -->
     <div class="row">
         <div class="col-lg-12">
+            <div class="row">
+                <div id="custom-search-input">
+                    <div class="input-group col-md-12">
+                        <input type="text" class="  search-query form-control" placeholder="Type a location" />
+                                <span class="input-group-btn">
+                                    <button class="btn btn-danger" type="button">
+                                        <span class=" glyphicon glyphicon-search"></span>
+                                    </button>
+                                </span>
+                    </div>
+                </div>
+            </div>
             <h1 class="page-header">Page Heading
                 <small>Secondary Text</small>
             </h1>
