--- a/templates/foodResults.html
+++ b/templates/foodResults.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
 
-    <title>1 Col Portfolio - Start Bootstrap Template</title>
+    <title>World's Meal</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../public/styles/bootstrap.min.css" rel="stylesheet">
