--- a/templates/foodResults.html
+++ b/templates/foodResults.html
@@ -32,8 +32,8 @@
                     </div>
                 </div>
             </div>
-            <h1 class="page-header">Page Heading
-                <small>Secondary Text</small>
+            <h1 class="page-header">Meal from Italy
+                <small>lalalalala</small>
             </h1>
         </div>
     </div>
@@ -47,9 +47,9 @@
             </a>
         </div>
         <div class="col-md-5">
-            <h3>Project One</h3>
+            <h3>Cannelloni</h3>
             <h4>Subheading</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+            <p>Cannelloni are a cylindrical type of pasta generally served baked with a filling and covered by a sauce in Italian cuisine. Popular stuffings include spinach and ricotta or minced beef. The sauces typically used are tomato underneath and besciamella sauce to cover the top.</p>
             <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
         </div>
     </div>
@@ -60,15 +60,15 @@
     <!-- Project Two -->
     <div class="row">
         <div class="col-md-7">
-            <a href="#">
+
                 <img class="img-responsive" src="../public/img/lasagne.jpg" alt="">
-            </a>
+
         </div>
         <div class="col-md-5">
-            <h3>Project Two</h3>
-            <h4>Subheading</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-            <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+            <h3>Lasagne</h3>
+            <h4>Naples, Italy</h4>
+            <p>Lasagne are wide, flat-shaped pasta, and possibly one of the oldest types of pasta. The word "lasagne" and, in many non-Italian languages, the singular "lasagna", can also refer to a dish made with several layers of lasagne sheets alternated with sauces and various other ingredients.</p>
+            <a class="btn btn-primary" href="#">View More <span class="glyphicon glyphicon-chevron-right"></span></a>
         </div>
     </div>
     <!-- /.row -->
@@ -78,15 +78,13 @@
     <!-- Project Three -->
     <div class="row">
         <div class="col-md-7">
-            <a href="#">
                 <img class="img-responsive" src="../public/img/cannoli2.jpg" alt="">
-            </a>
         </div>
         <div class="col-md-5">
-            <h3>Project Three</h3>
-            <h4>Subheading</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-            <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+            <h3>Cannoli</h3>
+            <h4>Palermo, Italy</h4>
+            <p>Cannoli are Sicilian pastry desserts. Cannoli consist of tube-shaped shells of fried pastry dough, filled with a sweet, creamy filling usually containing ricotta. They range in size from "cannulicchi", no bigger than a finger, to the fist-sized proportions typically found south of Palermo, Sicily, in Piana degli Albanesi.</p>
+            <a class="btn btn-primary" href="#">View More <span class="glyphicon glyphicon-chevron-right"></span></a>
         </div>
     </div>
     <!-- /.row -->
@@ -97,15 +95,13 @@
     <!-- Project Four -->
     <div class="row">
         <div class="col-md-7">
-            <a href="#">
                 <img class="img-responsive" src="../public/img/pizza.jpeg" alt="">
-            </a>
         </div>
         <div class="col-md-5">
-            <h3>Project Three</h3>
-            <h4>Subheading</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-            <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+            <h3>Pizza</h3>
+            <h4>Naples, Italy</h4>
+            <p>Pizza is a flatbread generally topped with tomato sauce and cheese and baked in an oven. It is commonly topped with a selection of meats, vegetables and condiments. The pizza was invented in Naples, Italy, and the dish and its variants have since become popular in many areas of the world.!</p>
+            <a class="btn btn-primary" href="#">View More <span class="glyphicon glyphicon-chevron-right"></span></a>
         </div>
     </div>
     <!-- /.row -->
