--- a/templates/foodResults.html
+++ b/templates/foodResults.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="../public/styles/bootstrap.min.css" rel="stylesheet">
+    <link href="../public/styles/main.css" rel="stylesheet">
 
 </head>
 
@@ -39,25 +40,8 @@
     </div>
     <!-- /.row -->
 
-    <!-- Project One -->
-    <div class="row">
-        <div class="col-md-7">
-            <a href="#">
-                <img class="img-responsive" src="../public/img/italianFood.jpg" >
-            </a>
-        </div>
-        <div class="col-md-5">
-            <h3>Cannelloni</h3>
-            <h4>Subheading</h4>
-            <p>Cannelloni are a cylindrical type of pasta generally served baked with a filling and covered by a sauce in Italian cuisine. Popular stuffings include spinach and ricotta or minced beef. The sauces typically used are tomato underneath and besciamella sauce to cover the top.</p>
-            <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
-        </div>
-    </div>
-    <!-- /.row -->
 
-    <hr>
-
-    <!-- Project Two -->
+     <!-- Project Two -->
     <div class="row">
         <div class="col-md-7">
 
@@ -65,15 +49,33 @@
 
         </div>
         <div class="col-md-5">
-            <h3>Lasagne</h3>
-            <h4>Naples, Italy</h4>
-            <p>Lasagne are wide, flat-shaped pasta, and possibly one of the oldest types of pasta. The word "lasagne" and, in many non-Italian languages, the singular "lasagna", can also refer to a dish made with several layers of lasagne sheets alternated with sauces and various other ingredients.</p>
-            <a class="btn btn-primary" href="#">View More <span class="glyphicon glyphicon-chevron-right"></span></a>
+            <h3 class="nameMeal">Lasagne</h3>
+            <h4><i>Naples, Italy</i></h4>
+            <p class="descMeal">Lasagne are wide, flat-shaped pasta, and possibly one of the oldest types of pasta. The word "lasagne" and, in many non-Italian languages, the singular "lasagna", can also refer to a dish made with several layers of lasagne sheets alternated with sauces and various other ingredients.</p>
+            <a class="btn btn-primary" >View More <span class="glyphicon glyphicon-chevron-right"></span></a>
+        </div>
+    </div>
+    <!-- /.row -->
+
+
+    <hr>
+
+    <!-- Project One -->
+    <div class="row">
+        <div class="col-md-7">
+                <img class="img-responsive" src="../public/img/italianFood1.jpg" >
+        </div>
+        <div class="col-md-5">
+            <h3 class="nameMeal">Cannelloni</h3>
+            <h4><i>Rome, Italy</i></h4>
+            <p class="descMeal">Cannelloni are a cylindrical type of pasta generally served baked with a filling and covered by a sauce in Italian cuisine. Popular stuffings include spinach and ricotta or minced beef. The sauces typically used are tomato underneath and besciamella sauce to cover the top.</p>
+            <a class="btn btn-primary" >View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
         </div>
     </div>
     <!-- /.row -->
 
     <hr>
+
 
     <!-- Project Three -->
     <div class="row">
@@ -81,9 +83,9 @@
                 <img class="img-responsive" src="../public/img/cannoli2.jpg" alt="">
         </div>
         <div class="col-md-5">
-            <h3>Cannoli</h3>
-            <h4>Palermo, Italy</h4>
-            <p>Cannoli are Sicilian pastry desserts. Cannoli consist of tube-shaped shells of fried pastry dough, filled with a sweet, creamy filling usually containing ricotta. They range in size from "cannulicchi", no bigger than a finger, to the fist-sized proportions typically found south of Palermo, Sicily, in Piana degli Albanesi.</p>
+            <h3 class="nameMeal">Cannoli</h3>
+             <h4><i>Palermo, Italy</i></h4>
+            <p class="descMeal">Cannoli are Sicilian pastry desserts. Cannoli consist of tube-shaped shells of fried pastry dough, filled with a sweet, creamy filling usually containing ricotta. They range in size from "cannulicchi", no bigger than a finger, to the fist-sized proportions typically found south of Palermo, Sicily, in Piana degli Albanesi.</p>
             <a class="btn btn-primary" href="#">View More <span class="glyphicon glyphicon-chevron-right"></span></a>
         </div>
     </div>
@@ -98,10 +100,10 @@
                 <img class="img-responsive" src="../public/img/pizza.jpeg" alt="">
         </div>
         <div class="col-md-5">
-            <h3>Pizza</h3>
-            <h4>Naples, Italy</h4>
-            <p>Pizza is a flatbread generally topped with tomato sauce and cheese and baked in an oven. It is commonly topped with a selection of meats, vegetables and condiments. The pizza was invented in Naples, Italy, and the dish and its variants have since become popular in many areas of the world.!</p>
-            <a class="btn btn-primary" href="#">View More <span class="glyphicon glyphicon-chevron-right"></span></a>
+            <h3 class="nameMeal">Pizza</h3>
+             <h4><i>Naples, Italy</i></h4>
+            <p class="descMeal">Pizza is a flatbread generally topped with tomato sauce and cheese and baked in an oven. It is commonly topped with a selection of meats, vegetables and condiments. The pizza was invented in Naples, Italy, and the dish and its variants have since become popular in many areas of the world.!</p>
+            <a class="btn btn-primary">View More <span class="glyphicon glyphicon-chevron-right"></span></a>
         </div>
     </div>
     <!-- /.row -->
