--- a/public/styles/grayscale.css
+++ b/public/styles/grayscale.css
@@ -147,6 +147,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
+    text-shadow: 1px 2px #151517;
     background: url(../img/9.jpg) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
