--- a/templates/foodResults.html
+++ b/templates/foodResults.html
@@ -34,7 +34,6 @@
                 </div>
             </div>
             <h1 class="page-header">Meal from Italy
-                <small>lalalalala</small>
             </h1>
         </div>
     </div>
@@ -51,6 +50,8 @@
         <div class="col-md-5">
             <h3 class="nameMeal">Lasagne</h3>
             <h4><i>Naples, Italy</i></h4>
+            <div class="budget"><span class="glyphicon glyphicon-euro"></span><span class="glyphicon glyphicon-euro"></span><span class="glyphicon glyphicon-euro"></span></div>
+            <hr>
             <p class="descMeal">Lasagne are wide, flat-shaped pasta, and possibly one of the oldest types of pasta. The word "lasagne" and, in many non-Italian languages, the singular "lasagna", can also refer to a dish made with several layers of lasagne sheets alternated with sauces and various other ingredients.</p>
             <a class="btn btn-primary" >View More <span class="glyphicon glyphicon-chevron-right"></span></a>
         </div>
@@ -68,8 +69,10 @@
         <div class="col-md-5">
             <h3 class="nameMeal">Cannelloni</h3>
             <h4><i>Rome, Italy</i></h4>
+            <div class="budget"><span class="glyphicon glyphicon-euro"><span class="glyphicon glyphicon-euro"></span><span class="glyphicon glyphicon-euro"></span><span class="glyphicon glyphicon-euro"></span></div>
+            <hr>
             <p class="descMeal">Cannelloni are a cylindrical type of pasta generally served baked with a filling and covered by a sauce in Italian cuisine. Popular stuffings include spinach and ricotta or minced beef. The sauces typically used are tomato underneath and besciamella sauce to cover the top.</p>
-            <a class="btn btn-primary" >View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+            <a class="btn btn-primary" >View More <span class="glyphicon glyphicon-chevron-right"></span></a>
         </div>
     </div>
     <!-- /.row -->
@@ -85,8 +88,10 @@
         <div class="col-md-5">
             <h3 class="nameMeal">Cannoli</h3>
              <h4><i>Palermo, Italy</i></h4>
+            <div class="budget"><span class="glyphicon glyphicon-euro"></span><span class="glyphicon glyphicon-euro"></span></div>
+            <hr>
             <p class="descMeal">Cannoli are Sicilian pastry desserts. Cannoli consist of tube-shaped shells of fried pastry dough, filled with a sweet, creamy filling usually containing ricotta. They range in size from "cannulicchi", no bigger than a finger, to the fist-sized proportions typically found south of Palermo, Sicily, in Piana degli Albanesi.</p>
-            <a class="btn btn-primary" href="#">View More <span class="glyphicon glyphicon-chevron-right"></span></a>
+            <a class="btn btn-primary">View More <span class="glyphicon glyphicon-chevron-right"></span></a>
         </div>
     </div>
     <!-- /.row -->
@@ -102,6 +107,8 @@
         <div class="col-md-5">
             <h3 class="nameMeal">Pizza</h3>
              <h4><i>Naples, Italy</i></h4>
+            <div class="budget"><span class="glyphicon glyphicon-euro"></span><span class="glyphicon glyphicon-euro"></span><span class="glyphicon glyphicon-euro"></span></div>
+            <hr>
             <p class="descMeal">Pizza is a flatbread generally topped with tomato sauce and cheese and baked in an oven. It is commonly topped with a selection of meats, vegetables and condiments. The pizza was invented in Naples, Italy, and the dish and its variants have since become popular in many areas of the world.!</p>
             <a class="btn btn-primary">View More <span class="glyphicon glyphicon-chevron-right"></span></a>
         </div>
@@ -111,12 +118,14 @@
 </div>
 <!-- /.container -->
 
-</body>
+<hr>
 <footer>
     <div class="container text-center">
         <p>Copyright &copy; Ludmila & Emilia 2015</p>
     </div>
 </footer>
+</body>
+
 
 
 
