--- a/public/styles/grayscale.css
+++ b/public/styles/grayscale.css
@@ -379,3 +379,7 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
+#logo{
+    width: 26%;
+    height: auto;
+}
