--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -47,3 +47,17 @@
     float: right;
     margin-top: -30px;
 }
+
+.logo{
+    margin-top: -30px;
+    margin-left: -90px;
+}
+
+.location{
+    margin-top: 8px;
+    margin-right: -90px;
+}
+
+.footertext{
+    color: #fff;
+}
