--- a/templates/foodResults.html
+++ b/templates/foodResults.html
@@ -24,7 +24,7 @@
             <div class="row">
                 <div id="custom-search-input">
                     <div class="input-group col-md-12">
-                        <input type="text" class="  search-query form-control" placeholder="Type a location" />
+                        <input type="text" class="searchBar  search-query form-control" placeholder="Type a location" />
                                 <span class="input-group-btn">
                                     <button class="btn btn-danger" type="button">
                                         <span class=" glyphicon glyphicon-search"></span>
